Fix: Sidebar visibility on desktop and Copy Link button text contrast

--- a/src/output.css
+++ b/src/output.css
@@ -7887,6 +7887,11 @@ input[type="range"]::-moz-range-thumb {
     flex-grow: 0;
   }
 
+  .md\:translate-x-0 {
+    --tw-translate-x: 0px;
+    transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
+  }
+
   .md\:grid-cols-2 {
     grid-template-columns: repeat(2, minmax(0, 1fr));
   }
